[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wandbfsspec"
version = "0.2.0"
packages = [{ include = "wandbfsspec", from = "src" }]
description = "fsspec interface for Weights & Biases (wandb)"
authors = ["Alvaro Bartolome <alvarobartt@yahoo.com>"]
readme = "README.md"
homepage = "https://github.com/alvarobartt/wandbfsspec"
documentation = "https://github.com/alvarobartt/wandbfsspec"
repository = "https://github.com/alvarobartt/wandbfsspec"
license = "MIT License"

[tool.poetry.plugins."fsspec.specs"]
wandbfs = "wandbfsspec.core.WandbFileSystem"
wandbas = "wandbfsspec.core.WandbArtifactStore"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
fsspec = "^2022.5.0"
wandb = "~0.13.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^7.1.2"
pydantic = "^1.9.1"

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s: %(message)s"
